--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     const vuttonNo = document.getElementById('no');
 
     const zomosNobios = () => {
+      alert('💞Sabía que ibas a decir que shi💞');
       alert('💞Ahora somos san valentinos💞');
       location.href = 'https://www.youtube.com/watch?v=TCa_z-wKc48';
     };
